# hierarchical-research-team

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEMO.md
docs/assets/: showcase.html
src/research_team/: __init__.py  agents.py  cli.py  models.py  reranker.py  search.py
tests/: conftest.py  test_agents.py  test_models.py  test_reranker.py  test_search.py
